# sprachboot

./: .env.example  .gitignore  CLAUDE.md  README.md  TODOS.md  compose.friend.yml  design.md  docker-compose.yml  publish.sh  skills-lock.json  start.py
.github/workflows/: publish.yml  release.yml
.hallmark/: log.json  preflight.json
backend/: .dockerignore  .gitignore  Dockerfile  check_chroma.py  main.py  pyproject.toml  run_server.py  sprachboot-server.spec
backend/data/: b1_engineering_vocab.json  cefr_a1_wordlist.json  cefr_a2_wordlist.json
backend/data/test_prompts/: weekly_a1.json
backend/models/: db.py  schemas.py
backend/routers/: analytics.py  profile.py  review.py  scenario.py  session.py  settings.py  test.py  translate.py
backend/services/: chroma_service.py  conversation.py  difficulty.py  error_analysis.py  goal_scoring.py  keychain.py  memory.py  openrouter_client.py  profile_engine.py  receipt.py  scenario.py  spaced_repetition.py  test_engine.py  translation.py
backend/tests/: conftest.py  test_flow.py  test_keychain.py  test_model_resolution.py  test_pr2.py  test_pr3.py  test_preferences.py  test_receipt.py  test_settings_api.py  test_translate_api.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/app/: globals.css  landing.css  layout.tsx  page.tsx
frontend/components/: AppShell.tsx  ChatBubble.tsx  ErrorDot.tsx  ErrorOverlay.tsx  FlowDial.tsx  Footer.tsx  LevelBadge.tsx  Nav.tsx  (+1 more)
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
website/: index.html
(+33 files in other folders)
